<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pereira.felipe.testejogo.MainActivity">

    <Button
        android:id="@+id/bt_tuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_menu_tutorial"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/bt_carregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_menu_carregar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_tuto" />

    <Button
        android:id="@+id/bt_novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_menu_novo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_carregar" />
</android.support.constraint.ConstraintLayout>
